--- a/index.html
+++ b/index.html
@@ -235,7 +235,8 @@ https://templatemo.com/tm-518-sentra
                 <div class="tabs-content">
                     <div class="wrapper">
                         <ul class="tabs clearfix" data-tabgroup="first-tab-group">
-                            <li><a href="#tab3" class="active">23 Sex</a></li>
+                            <li><a href="#tab2" class="active">24 Sáb</a></li>
+                            <li><a href="#tab3">23 Sex</a></li>
                             <li><a href="#tab4">22 Qui</a></li>
                             <li><a href="#tab5">21 Qua</a></li>
                             <li><a href="#tab6">20 Ter</a></li>
@@ -243,6 +244,152 @@ https://templatemo.com/tm-518-sentra
                             <li><a href="#tab8">18 Dom</a></li>
                         </ul>
                         <section id="first-tab-group" class="tabgroup">
+                            <div id="tab3">
+                                <ul>
+                                    <li>
+                                        <div class="item">
+                                            <img src="img/ponto/44-kameo.jpeg" alt="" width="306" height="230">
+                                            <div class="text-content">
+                                                <h4>Kameo: The elements of power</h4>
+                                                <span>+1 Ambrósio</span>
+                                                <p><strong>Qual é o nome deste jogo?</strong>
+                                                    <br />
+                                                    O jogador controla Kameo, uma elfa de 16 anos, que deve viajar pela
+                                                    terra, resgatando sua família enquanto coleta Sprites Elementais e
+                                                    Guerreiros em um combate estilo Beat 'Em Up contra os trolls que
+                                                    estão em seu caminho. Os dez poderes elementais de Kameo permitem
+                                                    que ela se transforme em criaturas e use suas várias habilidades
+                                                    para resolver quebra-cabeças de combate e progredir nos níveis do
+                                                    jogo.
+                                                </p>
+                                            </div>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="item">
+                                            <img src="img/ponto/45-perfect-dark-zero.jpg" alt="" width="306"
+                                                height="230">
+                                            <div class="text-content">
+                                                <h4>Perfect Dark Zero</h4>
+                                                <span>+1 Hrone</span>
+                                                <p><strong>Qual é o nome deste jogo?</strong>
+                                                    <br />
+                                                    Perfect Dark Zero conta a história de Joanna Dark em seu período de
+                                                    treinamento, junto com seu pai, Jack Dark, e Chandra, que completa o
+                                                    trio de Fianças Dark. A história se passa no ano de 2020, quando
+                                                    Joanna tinha apenas 20 anos de idade. Com o prosseguir da história é
+                                                    revelada a morte de Jack Dark, morto por uma das rivais de Joanna.
+                                                    Também se descobre que Chandra trabalha para a dataDyne, rival da
+                                                    família Dark.
+                                                </p>
+                                            </div>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="item">
+                                            <img src="img/ponto/46-desperados.jpg" alt="" width="306" height="230">
+                                            <div class="text-content">
+                                                <h4>Desperados</h4>
+                                                <span>+1 Hrone</span>
+                                                <p><strong>Qual é o nome deste jogo?</strong>
+                                                    <br />
+                                                    "Desperados: Wanted Dead or Alive" é o primeiro jogo de estratégia a
+                                                    combinar uma atmosfera baseada em filme e história de um jogo de
+                                                    aventura com o desafio intelectual de um jogo de tática em tempo
+                                                    real. Neste título de estilo ocidental, descubra um jogo de
+                                                    estratégia e tática em tempo real.
+                                                </p>
+                                            </div>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="item">
+                                            <img src="img/ponto/47-terraria.jpg" alt="" width="306" height="230">
+                                            <div class="text-content">
+                                                <h4>Terraria</h4>
+                                                <span>+1 Ambrósio</span>
+                                                <p><strong>Qual é o nome deste jogo?</strong>
+                                                    <br />
+                                                    Terraria é um jogo eletrônico RPG de ação-aventura independente
+                                                    produzido pela desenvolvedora de jogos Re-Logic. Possui como
+                                                    características a exploração, artesanato, construção de estruturas e
+                                                    combate a monstros perigosos em um mundo 2D gerado proceduramente.
+                                                </p>
+                                            </div>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="item">
+                                            <img src="img/ponto/48-charlie-murder.png" alt="" width="306" height="230">
+                                            <div class="text-content">
+                                                <h4>Charlie Murder</h4>
+                                                <span>Ninguém acertou</span>
+                                                <p><strong>Qual é o nome deste jogo?</strong>
+                                                    <br />
+                                                    Charlie Murder é um videogame de ação e ação, beat 'em up,
+                                                    desenvolvido pela Ska Studios e publicado pela Microsoft Game
+                                                    Studios para Xbox 360 e Ska Studios para PC.
+                                                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                                </p>
+                                            </div>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="item">
+                                            <img src="img/ponto/49-escape-dead-island.jpg" alt="" width="306"
+                                                height="230">
+                                            <div class="text-content">
+                                                <h4>Escape Dead Island</h4>
+                                                <span>Ninguém acertou</span>
+                                                <p><strong>Qual é o nome deste jogo?</strong>
+                                                    <br />
+                                                    Escape Dead Island é um videogame de terror de sobrevivência e
+                                                    aventura desenvolvido pelo desenvolvedor sueco Fatshark, publicado
+                                                    pelo estúdio alemão Deep Silver e distribuído pela Square Enix na
+                                                    América do Norte para PS3 e Xbox 360 e Valve para PC. É o segundo
+                                                    spin-off de Dead Island.
+                                                </p>
+                                            </div>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="item">
+                                            <img src="img/ponto/50-fable.jpg" alt="" width="306" height="230">
+                                            <div class="text-content">
+                                                <h4>Fable</h4>
+                                                <span>Ninguém acertou</span>
+                                                <p><strong>Qual é o nome deste jogo?</strong>
+                                                    <br />
+                                                    Fable é uma série de jogos de RPG de ação para plataformas Xbox,
+                                                    Microsoft Windows, macOS, Xbox 360 e Xbox One. A série foi
+                                                    desenvolvida pela Lionhead Studios até o estúdio ser fechado em 2016
+                                                    e é publicada pela Xbox Game Studios.
+                                                </p>
+                                            </div>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="item">
+                                            <img src="img/ponto/51-max-a-maldicao-da-irmandade.jpg" alt="" width="306"
+                                                height="230">
+                                            <div class="text-content">
+                                                <h4>Max: The Curse of Brotherhood</h4>
+                                                <span>+1 Ambrósio</span>
+                                                <p><strong>Qual é o nome deste jogo?</strong>
+                                                    <br />
+                                                    Max: The Curse of Brotherhood é um futuro jogo eletrônico de
+                                                    aventura desenvolvido pela Press Play e publicado pela Microsoft
+                                                    Studios para Xbox 360 e PC. O jogo foi apresentado durante a
+                                                    apresentação da Microsoft na E3 de 2013, com data de lançamento não
+                                                    anunciada.
+                                                </p>
+                                            </div>
+                                        </div>
+                                    </li>
+                                </ul>
+                            </div>
                             <div id="tab3">
                                 <ul>
                                     <li>
